更新 海信 包名

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ android {
 
         hisense {
             //海信的
-            applicationId 'com.github.hisense.osc.tk'
+            applicationId 'com.github.hisense.osc.tk.frank'
             dimension = "brand"
         }
     }
