--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,6 +151,9 @@ dependencies {
     implementation 'xyz.doikki.android.dkplayer:dkplayer-ui:3.3.7'
     implementation 'xyz.doikki.android.dkplayer:videocache:3.3.7'
 
+    implementation 'com.github.xuexiangjys:XUpdate:2.1.2' //在线升级
+    implementation 'com.github.xuexiangjys.XUpdateAPI:xupdate-easy:1.0.1'  //在线升级
+
     implementation 'com.lzy.net:okgo:3.0.4'
     implementation 'com.owen:tv-recyclerview:3.0.0'
     implementation 'com.blankj:utilcodex:1.31.0'
