--- a/.github/workflows/Main Self_build.yml
+++ b/.github/workflows/Main Self_build.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
   pull_request:
-  schedule:
-    - cron: 30 0-18/2 * * *
+  #schedule:
+    #- cron: 30 0-18/2 * * *
   workflow_dispatch:
     inputs:
       rebuild:
@@ -25,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - userName: chengxue2020
+          - userName: zylok520
             repoName: takagen99
             branchName: main
             java_ver: 17
