--- a/.github/workflows/Main Self_build.yml
+++ b/.github/workflows/Main Self_build.yml
@@ -76,7 +76,7 @@ jobs:
           signingConfig="$(echo "$signingConfig" |base64 -d )"
           sed -i -e "/defaultConfig {/i\\$signingConfigs " -e "/debug {/a\\$signingConfig " -e "/release {/a\\$signingConfig " app/build.gradle
           cp -f ${{ github.workspace }}/.github/workflows/TVBoxOSCnrc.jks app/TVBoxOSCnrc.jks
-          sed -i '$a\RELEASE_STORE_FILE=./TVBoxOSCnrc.jks'     ./gradle.properties
+          sed -i '$a\RELEASE_STORE_FILE=./TVBoxOSC.jks'     ./gradle.properties
           sed -i '$a\RELEASE_KEY_ALIAS=TVBoxOSCnrc'            ./gradle.properties
           sed -i '$a\RELEASE_STORE_PASSWORD=TVBoxOSCnrc'       ./gradle.properties
           sed -i '$a\RELEASE_KEY_PASSWORD=TVBoxOSCnrc'         ./gradle.properties
