--- a/.github/workflows/Main Self_build.yml
+++ b/.github/workflows/Main Self_build.yml
@@ -75,7 +75,7 @@ jobs:
           signingConfigs="$(echo "$signingConfigs" |base64 -d )"
           signingConfig="$(echo "$signingConfig" |base64 -d )"
           sed -i -e "/defaultConfig {/i\\$signingConfigs " -e "/debug {/a\\$signingConfig " -e "/release {/a\\$signingConfig " app/build.gradle
-          cp -f ${{ github.workspace }}/.github/workflows/TVBoxOSCnrc.jks app/TVBoxOSCnrc.jks
+          cp -f ${{ github.workspace }}/.github/workflows/TVBoxOSC.jks app/TVBoxOSC.jks
           sed -i '$a\RELEASE_STORE_FILE=./TVBoxOSC.jks'     ./gradle.properties
           sed -i '$a\RELEASE_KEY_ALIAS=TVBoxOSCnrc'            ./gradle.properties
           sed -i '$a\RELEASE_STORE_PASSWORD=TVBoxOSCnrc'       ./gradle.properties
