--- a/.github/workflows/Main Self_build.yml
+++ b/.github/workflows/Main Self_build.yml
@@ -95,7 +95,7 @@ jobs:
           ./gradlew assemblerelease --build-cache --parallel --daemon --warning-mode all
       - name: Prepare App
         if: ${{ env.commit }}
-        working-directory: TVBoxOSC
+        working-directory: TVBoxOSCnrc
         run: |
           rm -rf apk/
           mkdir -p apk/
