--- a/.github/workflows/auto_build_upsteam.yml
+++ b/.github/workflows/auto_build_upsteam.yml
@@ -21,8 +21,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - userName: takagen99
-            repoName: Box
+          - userName: zylok520
+            repoName: takagen99
             branchName: main
             java_ver: 17
     steps:
